--- a/public/index.html
+++ b/public/index.html
@@ -10,13 +10,15 @@
     type="text/css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Bungee&family=Source+Sans+Pro:wght@300;600&display=swap"
-    rel="stylesheet">
-
+  
   <!-- App CSS -->
   <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
   <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
   <link rel="stylesheet" href="/styles/header.css" type="text/css" />
+  <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css" />
+  <link href="https://fonts.googleapis.com/css2?family=Bungee&family=Source+Sans+Pro:wght@300;600&display=swap"
+  rel="stylesheet">
+
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"
     integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -52,37 +54,34 @@
 </header>
   <!-- Page-specific (main) content here -->
   <main class="container">
-    <p>AHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHSLEEPHHHHHHHHHHHHHH</p>
-    <p>AHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHSLEEPHHHHHHHHHHHHHH</p>
-    <p>AHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHSLEEPHHHHHHHHHHHHHH</p>
-    <p>AHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHSLEEPHHHHHHHHHHHHHH</p>
-    <p>AHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHSLEEPHHHHHHHHHHHHHH</p>
-    <p>AHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHSLEEPHHHHHHHHHHHHHH</p>
-    <p>AHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHSLEEPHHHHHHHHHHHHHH</p>
-    <p>AHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHSLEEPHHHHHHHHHHHHHH</p>
-    <p>AHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHSLEEPHHHHHHHHHHHHHH</p>
-    <p>AHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHSLEEPHHHHHHHHHHHHHH</p>
-    <p>AHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHSLEEPHHHHHHHHHHHHHH</p>
-    <p>AHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHSLEEPHHHHHHHHHHHHHH</p>
-    <p>AHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHSLEEPHHHHHHHHHHHHHH</p>
-    <p>AHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHSLEEPHHHHHHHHHHHHHH</p>
-    <p>AHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHSLEEPHHHHHHHHHHHHHH</p>
-    <p>AHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHSLEEPHHHHHHHHHHHHHH</p>
-    <p>AHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHSLEEPHHHHHHHHHHHHHH</p>
-    <p>AHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHSLEEPHHHHHHHHHHHHHH</p>
-    <p>AHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHSLEEPHHHHHHHHHHHHHH</p>
-    <p>AHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHSLEEPHHHHHHHHHHHHHH</p>
-    <p>AHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHSLEEPHHHHHHHHHHHHHH</p>
-    <p>AHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHSLEEPHHHHHHHHHHHHHH</p>
-    <p>AHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHSLEEPHHHHHHHHHHHHHH</p>
-    <p>AHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHSLEEPHHHHHHHHHHHHHH</p>
-    <p>AHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHSLEEPHHHHHHHHHHHHHH</p>
-    <p>AHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHSLEEPHHHHHHHHHHHHHH</p>
-    <p>AHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHSLEEPHHHHHHHHHHHHHH</p>
-    <p>AHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHSLEEPHHHHHHHHHHHHHH</p>
-    <p>AHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHSLEEPHHHHHHHHHHHHHH</p>
-    <p>AHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHSLEEPHHHHHHHHHHHHHH</p>
-    <p>AHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHSLEEPHHHHHHHHHHHHHH</p>
+    
+    <section class="new-tweet">
+      <form class= "new-tweet-form" method="post" action="/tweets/">
+        <textarea name="text" id="tweet-text" placeholder="What are you humming about?"></textarea>
+        <div class="submitbttn-counter-container">
+          <button style="
+          background-color: #4056A1;
+          color: white;
+          border: transparent;"
+          type="submit">Tweet</button>
+          <output name="counter" class="counter" for="tweet-text">140</output>
+        </div>
+      </form>
+    </section>
+    
+    <p>Hodor. Hodor hodor, hodor. Hodor hodor hodor hodor hodor. Hodor. Hodor! Hodor hodor, hodor; hodor hodor hodor. Hodor. Hodor hodor; hodor hodor - hodor, hodor, hodor hodor. Hodor, hodor. Hodor. Hodor, hodor hodor hodor; hodor hodor; hodor hodor hodor! Hodor hodor HODOR! Hodor hodor... Hodor hodor hodor...</p>
+    <p>Hodor. Hodor hodor, hodor. Hodor hodor hodor hodor hodor. Hodor. Hodor! Hodor hodor, hodor; hodor hodor hodor. Hodor. Hodor hodor; hodor hodor - hodor, hodor, hodor hodor. Hodor, hodor. Hodor. Hodor, hodor hodor hodor; hodor hodor; hodor hodor hodor! Hodor hodor HODOR! Hodor hodor... Hodor hodor hodor...</p>
+    <p>Hodor. Hodor hodor, hodor. Hodor hodor hodor hodor hodor. Hodor. Hodor! Hodor hodor, hodor; hodor hodor hodor. Hodor. Hodor hodor; hodor hodor - hodor, hodor, hodor hodor. Hodor, hodor. Hodor. Hodor, hodor hodor hodor; hodor hodor; hodor hodor hodor! Hodor hodor HODOR! Hodor hodor... Hodor hodor hodor...</p>
+    <p>Hodor. Hodor hodor, hodor. Hodor hodor hodor hodor hodor. Hodor. Hodor! Hodor hodor, hodor; hodor hodor hodor. Hodor. Hodor hodor; hodor hodor - hodor, hodor, hodor hodor. Hodor, hodor. Hodor. Hodor, hodor hodor hodor; hodor hodor; hodor hodor hodor! Hodor hodor HODOR! Hodor hodor... Hodor hodor hodor...</p>
+    <p>Hodor. Hodor hodor, hodor. Hodor hodor hodor hodor hodor. Hodor. Hodor! Hodor hodor, hodor; hodor hodor hodor. Hodor. Hodor hodor; hodor hodor - hodor, hodor, hodor hodor. Hodor, hodor. Hodor. Hodor, hodor hodor hodor; hodor hodor; hodor hodor hodor! Hodor hodor HODOR! Hodor hodor... Hodor hodor hodor...</p>
+    <p>Hodor. Hodor hodor, hodor. Hodor hodor hodor hodor hodor. Hodor. Hodor! Hodor hodor, hodor; hodor hodor hodor. Hodor. Hodor hodor; hodor hodor - hodor, hodor, hodor hodor. Hodor, hodor. Hodor. Hodor, hodor hodor hodor; hodor hodor; hodor hodor hodor! Hodor hodor HODOR! Hodor hodor... Hodor hodor hodor...</p>
+    <p>Hodor. Hodor hodor, hodor. Hodor hodor hodor hodor hodor. Hodor. Hodor! Hodor hodor, hodor; hodor hodor hodor. Hodor. Hodor hodor; hodor hodor - hodor, hodor, hodor hodor. Hodor, hodor. Hodor. Hodor, hodor hodor hodor; hodor hodor; hodor hodor hodor! Hodor hodor HODOR! Hodor hodor... Hodor hodor hodor...</p>
+    <p>Hodor. Hodor hodor, hodor. Hodor hodor hodor hodor hodor. Hodor. Hodor! Hodor hodor, hodor; hodor hodor hodor. Hodor. Hodor hodor; hodor hodor - hodor, hodor, hodor hodor. Hodor, hodor. Hodor. Hodor, hodor hodor hodor; hodor hodor; hodor hodor hodor! Hodor hodor HODOR! Hodor hodor... Hodor hodor hodor...</p>
+    <p>Hodor. Hodor hodor, hodor. Hodor hodor hodor hodor hodor. Hodor. Hodor! Hodor hodor, hodor; hodor hodor hodor. Hodor. Hodor hodor; hodor hodor - hodor, hodor, hodor hodor. Hodor, hodor. Hodor. Hodor, hodor hodor hodor; hodor hodor; hodor hodor hodor! Hodor hodor HODOR! Hodor hodor... Hodor hodor hodor...</p>
+    <p>Hodor. Hodor hodor, hodor. Hodor hodor hodor hodor hodor. Hodor. Hodor! Hodor hodor, hodor; hodor hodor hodor. Hodor. Hodor hodor; hodor hodor - hodor, hodor, hodor hodor. Hodor, hodor. Hodor. Hodor, hodor hodor hodor; hodor hodor; hodor hodor hodor! Hodor hodor HODOR! Hodor hodor... Hodor hodor hodor...</p>
+    <p>Hodor. Hodor hodor, hodor. Hodor hodor hodor hodor hodor. Hodor. Hodor! Hodor hodor, hodor; hodor hodor hodor. Hodor. Hodor hodor; hodor hodor - hodor, hodor, hodor hodor. Hodor, hodor. Hodor. Hodor, hodor hodor hodor; hodor hodor; hodor hodor hodor! Hodor hodor HODOR! Hodor hodor... Hodor hodor hodor...</p>
+    <p>Hodor. Hodor hodor, hodor. Hodor hodor hodor hodor hodor. Hodor. Hodor! Hodor hodor, hodor; hodor hodor hodor. Hodor. Hodor hodor; hodor hodor - hodor, hodor, hodor hodor. Hodor, hodor. Hodor. Hodor, hodor hodor hodor; hodor hodor; hodor hodor hodor! Hodor hodor HODOR! Hodor hodor... Hodor hodor hodor...</p>
+    <p>Hodor. Hodor hodor, hodor. Hodor hodor hodor hodor hodor. Hodor. Hodor! Hodor hodor, hodor; hodor hodor hodor. Hodor. Hodor hodor; hodor hodor - hodor, hodor, hodor hodor. Hodor, hodor. Hodor. Hodor, hodor hodor hodor; hodor hodor; hodor hodor hodor! Hodor hodor HODOR! Hodor hodor... Hodor hodor hodor...</p>
 
   </main>
 </body>
