--- a/public/index.html
+++ b/public/index.html
@@ -72,15 +72,30 @@
     </section>
     <section class="tweet-container">
     
-    <article>
-      <header>Newton<p>@SirIsaac</p></header>Hodor. Hodor hodor, hodor. Hodor hodor hodor hodor hodor. Hodor. Hodor!<footer># days ago</footer></article>
-    <article><header>I'm a header</header>Hodor. Hodor hodor, hodor. Hodor hodor hodor hodor hodor. Hodor. Hodor!<footer>I'm a footer</footer></article>
-    <article><header>I'm a header</header>Hodor. Hodor hodor, hodor. Hodor hodor hodor hodor hodor. Hodor. Hodor!<footer>I'm a footer</footer></article>
-    <article><header>I'm a header</header>Hodor. Hodor hodor, hodor. Hodor hodor hodor hodor hodor. Hodor. Hodor!<footer>I'm a footer</footer></article>
-    
+    <article class="tweet">
+      <header class="tweet-header">
+        <a>Newton</a>
+        <strong>@SirIsaac</strong>
+      </header>
+      <p>Hodor. Hodor hodor, hodor. Hodor hodor hodor hodor hodor. Hodor. Hodor!</p>
+      <footer>
+        <small>10 days ago</small>
+      </footer>
+    </article>
+
+    <article class="tweet">
+      <header class="tweet-header">
+        <a>Newton</a>
+        <strong>@SirIsaac</strong>
+      </header>
+      <p>Hodor. Hodor hodor, hodor. Hodor hodor hodor hodor hodor. Hodor. Hodor!</p>
+      <footer class="tweet-footer">
+        <small>10 days ago</small>
+      </footer>
+    </article>
   
   </section>
-  
+
 </main>
 </body>
 
