--- a/public/index.html
+++ b/public/index.html
@@ -78,8 +78,13 @@
         <strong>@SirIsaac</strong>
       </header>
       <p>Hodor. Hodor hodor, hodor. Hodor hodor hodor hodor hodor. Hodor. Hodor!</p>
-      <footer>
+      <footer class="tweet-footer">
         <small>10 days ago</small>
+        <div class="icons">
+          <i class="fas fa-flag"></i>
+          <i class="fas fa-retweet"></i>
+          <i class="fas fa-heart"></i>
+        </div>
       </footer>
     </article>
 
@@ -91,6 +96,43 @@
       <p>Hodor. Hodor hodor, hodor. Hodor hodor hodor hodor hodor. Hodor. Hodor!</p>
       <footer class="tweet-footer">
         <small>10 days ago</small>
+        <div class="icons">
+          <i class="fas fa-flag"></i>
+          <i class="fas fa-retweet"></i>
+          <i class="fas fa-heart"></i>
+        </div>
+      </footer>
+    </article>
+
+    <article class="tweet">
+      <header class="tweet-header">
+        <a>Newton</a>
+        <strong>@SirIsaac</strong>
+      </header>
+      <p>Hodor. Hodor hodor, hodor. Hodor hodor hodor hodor hodor. Hodor. Hodor!</p>
+      <footer class="tweet-footer">
+        <small>10 days ago</small>
+        <div class="icons">
+          <i class="fas fa-flag"></i>
+          <i class="fas fa-retweet"></i>
+          <i class="fas fa-heart"></i>
+        </div>
+      </footer>
+    </article>
+
+    <article class="tweet">
+      <header class="tweet-header">
+        <a>Newton</a>
+        <strong>@SirIsaac</strong>
+      </header>
+      <p>Hodor. Hodor hodor, hodor. Hodor hodor hodor hodor hodor. Hodor. Hodor!</p>
+      <footer class="tweet-footer">
+        <small>10 days ago</small>
+        <div class="icons">
+          <i class="fas fa-flag"></i>
+          <i class="fas fa-retweet"></i>
+          <i class="fas fa-heart"></i>
+        </div>
       </footer>
     </article>
   
