--- a/public/index.html
+++ b/public/index.html
@@ -10,14 +10,14 @@
     type="text/css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  
+
   <!-- App CSS -->
   <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
   <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
   <link rel="stylesheet" href="/styles/header.css" type="text/css" />
   <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css" />
   <link href="https://fonts.googleapis.com/css2?family=Bungee&family=Source+Sans+Pro:wght@300;600&display=swap"
-  rel="stylesheet">
+    rel="stylesheet">
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"
     integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA=="
@@ -39,7 +39,7 @@
     <span style="font-family: bungee">tweeter</span>
     <div class="nav-div">
       <p><strong>Write</strong> a new tweet</p>
-      <i class="fas fa-angle-double-down" ></i>
+      <i class="fas fa-angle-double-down"></i>
     </div>
   </nav>
 
@@ -47,98 +47,97 @@
   <header class="header">
 
     <div class="header-img">
-        <img src="/images/profile-hex.png"> 
+      <img src="/images/profile-hex.png">
     </div>
     <br>
     <div>
-        <h2 style="margin-top: 0px;">Nezuko Kamado</h2>
+      <h2 style="margin-top: 0px;">Nezuko Kamado</h2>
     </div>
-</header>
+  </header>
   <!-- Page-specific (main) content here -->
   <main id="container">
-    
+
     <section class="new-tweet">
-      <form class= "new-tweet-form" method="post" action="/tweets/">        
+      <form class="new-tweet-form" method="post" action="/tweets/">
         <textarea name="text" id="tweet-text" placeholder="What are you humming about?"></textarea>
         <div class="submitbttn-counter-container">
           <button style="
           background-color: #4056A1;
           color: white;
-          border: transparent;"
-          type="submit">Tweet</button>
+          border: transparent;" type="submit">Tweet</button>
           <output name="counter" class="counter" for="tweet-text">140</output>
         </div>
       </form>
     </section>
+
     <section class="tweet-container">
-    
-    <article class="tweet">
-      <header class="tweet-header">
-        <a>Newton</a>
-        <strong>@SirIsaac</strong>
-      </header>
-      <p>Hodor. Hodor hodor, hodor. Hodor hodor hodor hodor hodor. Hodor. Hodor!</p>
-      <footer class="tweet-footer">
-        <small>10 days ago</small>
-        <div class="icons">
-          <i class="fas fa-flag"></i>
-          <i class="fas fa-retweet"></i>
-          <i class="fas fa-heart"></i>
-        </div>
-      </footer>
-    </article>
+      <article class="tweet">
+        <header class="tweet-header">
+          <a><i class="far fa-smile"></i>Newton</a>
+          <strong>@SirIsaac</strong>
+        </header>
+        <p>Hodor. Hodor hodor, hodor. Hodor hodor hodor hodor hodor. Hodor. Hodor!</p>
+        <footer class="tweet-footer">
+          <small>10 days ago</small>
+          <div class="icons">
+            <i class="fas fa-flag"></i>
+            <i class="fas fa-retweet"></i>
+            <i class="fas fa-heart"></i>
+          </div>
+        </footer>
+      </article>
 
-    <article class="tweet">
-      <header class="tweet-header">
-        <a>Newton</a>
-        <strong>@SirIsaac</strong>
-      </header>
-      <p>Hodor. Hodor hodor, hodor. Hodor hodor hodor hodor hodor. Hodor. Hodor!</p>
-      <footer class="tweet-footer">
-        <small>10 days ago</small>
-        <div class="icons">
-          <i class="fas fa-flag"></i>
-          <i class="fas fa-retweet"></i>
-          <i class="fas fa-heart"></i>
-        </div>
-      </footer>
-    </article>
+      <article class="tweet">
+        <header class="tweet-header">
+          <a><i class="far fa-smile"></i>Newton</a>
+          <strong>@SirIsaac</strong>
+        </header>
+        <p>Hodor. Hodor hodor, hodor. Hodor hodor hodor hodor hodor. Hodor. Hodor!</p>
+        <footer class="tweet-footer">
+          <small>10 days ago</small>
+          <div class="icons">
+            <i class="fas fa-flag"></i>
+            <i class="fas fa-retweet"></i>
+            <i class="fas fa-heart"></i>
+          </div>
+        </footer>
+      </article>
 
-    <article class="tweet">
-      <header class="tweet-header">
-        <a>Newton</a>
-        <strong>@SirIsaac</strong>
-      </header>
-      <p>Hodor. Hodor hodor, hodor. Hodor hodor hodor hodor hodor. Hodor. Hodor!</p>
-      <footer class="tweet-footer">
-        <small>10 days ago</small>
-        <div class="icons">
-          <i class="fas fa-flag"></i>
-          <i class="fas fa-retweet"></i>
-          <i class="fas fa-heart"></i>
-        </div>
-      </footer>
-    </article>
+      <article class="tweet">
+        <header class="tweet-header">
+          <a><i class="far fa-smile"></i>Newton</a>
+          <strong>@SirIsaac</strong>
+        </header>
+        <p>Hodor. Hodor hodor, hodor. Hodor hodor hodor hodor hodor. Hodor. Hodor!</p>
+        <footer class="tweet-footer">
+          <small>10 days ago</small>
+          <div class="icons">
+            <i class="fas fa-flag"></i>
+            <i class="fas fa-retweet"></i>
+            <i class="fas fa-heart"></i>
+          </div>
+        </footer>
+      </article>
 
-    <article class="tweet">
-      <header class="tweet-header">
-        <a>Newton</a>
-        <strong>@SirIsaac</strong>
-      </header>
-      <p>Hodor. Hodor hodor, hodor. Hodor hodor hodor hodor hodor. Hodor. Hodor!</p>
-      <footer class="tweet-footer">
-        <small>10 days ago</small>
-        <div class="icons">
-          <i class="fas fa-flag"></i>
-          <i class="fas fa-retweet"></i>
-          <i class="fas fa-heart"></i>
-        </div>
-      </footer>
-    </article>
-  
-  </section>
+      <article class="tweet">
+        <header class="tweet-header">
+          <a><i class="far fa-smile"></i>Newton</a>
+          <strong>@SirIsaac</strong>
+        </header>
+        <p>Hodor. Hodor hodor, hodor. Hodor hodor hodor hodor hodor. Hodor. Hodor!</p>
+        <footer class="tweet-footer">
+          <small>10 days ago</small>
+          <div class="icons">
+            <i class="fas fa-flag"></i>
+            <i class="fas fa-retweet"></i>
+            <i class="fas fa-heart"></i>
+          </div>
+        </footer>
+      </article>
 
-</main>
+    </section>
+
+  </main>
 </body>
 
 </html>
