--- a/public/index.html
+++ b/public/index.html
@@ -86,7 +86,6 @@
           </div>
         </footer>
       </article>
-
       <article class="tweet">
         <header class="tweet-header">
           <a><i class="far fa-smile"></i>Newton</a>
@@ -101,9 +100,63 @@
             <i class="fas fa-heart"></i>
           </div>
         </footer>
-      </article>
-
-      <article class="tweet">
+      </article><article class="tweet">
+        <header class="tweet-header">
+          <a><i class="far fa-smile"></i>Newton</a>
+          <strong>@SirIsaac</strong>
+        </header>
+        <p>Hodor. Hodor hodor, hodor. Hodor hodor hodor hodor hodor. Hodor. Hodor!</p>
+        <footer class="tweet-footer">
+          <small>10 days ago</small>
+          <div class="icons">
+            <i class="fas fa-flag"></i>
+            <i class="fas fa-retweet"></i>
+            <i class="fas fa-heart"></i>
+          </div>
+        </footer>
+      </article><article class="tweet">
+        <header class="tweet-header">
+          <a><i class="far fa-smile"></i>Newton</a>
+          <strong>@SirIsaac</strong>
+        </header>
+        <p>Hodor. Hodor hodor, hodor. Hodor hodor hodor hodor hodor. Hodor. Hodor!</p>
+        <footer class="tweet-footer">
+          <small>10 days ago</small>
+          <div class="icons">
+            <i class="fas fa-flag"></i>
+            <i class="fas fa-retweet"></i>
+            <i class="fas fa-heart"></i>
+          </div>
+        </footer>
+      </article><article class="tweet">
+        <header class="tweet-header">
+          <a><i class="far fa-smile"></i>Newton</a>
+          <strong>@SirIsaac</strong>
+        </header>
+        <p>Hodor. Hodor hodor, hodor. Hodor hodor hodor hodor hodor. Hodor. Hodor!</p>
+        <footer class="tweet-footer">
+          <small>10 days ago</small>
+          <div class="icons">
+            <i class="fas fa-flag"></i>
+            <i class="fas fa-retweet"></i>
+            <i class="fas fa-heart"></i>
+          </div>
+        </footer>
+      </article><article class="tweet">
+        <header class="tweet-header">
+          <a><i class="far fa-smile"></i>Newton</a>
+          <strong>@SirIsaac</strong>
+        </header>
+        <p>Hodor. Hodor hodor, hodor. Hodor hodor hodor hodor hodor. Hodor. Hodor!</p>
+        <footer class="tweet-footer">
+          <small>10 days ago</small>
+          <div class="icons">
+            <i class="fas fa-flag"></i>
+            <i class="fas fa-retweet"></i>
+            <i class="fas fa-heart"></i>
+          </div>
+        </footer>
+      </article><article class="tweet">
         <header class="tweet-header">
           <a><i class="far fa-smile"></i>Newton</a>
           <strong>@SirIsaac</strong>
@@ -118,23 +171,7 @@
           </div>
         </footer>
       </article>
-
-      <article class="tweet">
-        <header class="tweet-header">
-          <a><i class="far fa-smile"></i>Newton</a>
-          <strong>@SirIsaac</strong>
-        </header>
-        <p>Hodor. Hodor hodor, hodor. Hodor hodor hodor hodor hodor. Hodor. Hodor!</p>
-        <footer class="tweet-footer">
-          <small>10 days ago</small>
-          <div class="icons">
-            <i class="fas fa-flag"></i>
-            <i class="fas fa-retweet"></i>
-            <i class="fas fa-heart"></i>
-          </div>
-        </footer>
-      </article>
-
+      
     </section>
 
   </main>
