Created and Append tweets

--- a/public/index.html
+++ b/public/index.html
@@ -22,13 +22,16 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"
     integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/timeago.js/4.0.2/timeago.min.js"
+    integrity="sha512-SVDh1zH5N9ChofSlNAK43lcNS7lWze6DTVx1JCXH1Tmno+0/1jMpdbR8YDgDUfcUrPp1xyE53G42GFrcM0CMVg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
   <!-- External JS -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
   <!-- App JS -->
-  <script type="text/javascript" src="/scripts/client.js"></script>
   <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
+  <script type="text/javascript" src="/scripts/client.js"></script>
 
 </head>
 
@@ -70,7 +73,7 @@
       </form>
     </section>
 
-    <section class="tweet-container">
+    <section id="tweets-container">
       <article class="tweet">
         <header class="tweet-header">
           <a><i class="far fa-smile"></i>Newton</a>
@@ -86,92 +89,6 @@
           </div>
         </footer>
       </article>
-      <article class="tweet">
-        <header class="tweet-header">
-          <a><i class="far fa-smile"></i>Newton</a>
-          <strong>@SirIsaac</strong>
-        </header>
-        <p>Hodor. Hodor hodor, hodor. Hodor hodor hodor hodor hodor. Hodor. Hodor!</p>
-        <footer class="tweet-footer">
-          <small>10 days ago</small>
-          <div class="icons">
-            <i class="fas fa-flag"></i>
-            <i class="fas fa-retweet"></i>
-            <i class="fas fa-heart"></i>
-          </div>
-        </footer>
-      </article><article class="tweet">
-        <header class="tweet-header">
-          <a><i class="far fa-smile"></i>Newton</a>
-          <strong>@SirIsaac</strong>
-        </header>
-        <p>Hodor. Hodor hodor, hodor. Hodor hodor hodor hodor hodor. Hodor. Hodor!</p>
-        <footer class="tweet-footer">
-          <small>10 days ago</small>
-          <div class="icons">
-            <i class="fas fa-flag"></i>
-            <i class="fas fa-retweet"></i>
-            <i class="fas fa-heart"></i>
-          </div>
-        </footer>
-      </article><article class="tweet">
-        <header class="tweet-header">
-          <a><i class="far fa-smile"></i>Newton</a>
-          <strong>@SirIsaac</strong>
-        </header>
-        <p>Hodor. Hodor hodor, hodor. Hodor hodor hodor hodor hodor. Hodor. Hodor!</p>
-        <footer class="tweet-footer">
-          <small>10 days ago</small>
-          <div class="icons">
-            <i class="fas fa-flag"></i>
-            <i class="fas fa-retweet"></i>
-            <i class="fas fa-heart"></i>
-          </div>
-        </footer>
-      </article><article class="tweet">
-        <header class="tweet-header">
-          <a><i class="far fa-smile"></i>Newton</a>
-          <strong>@SirIsaac</strong>
-        </header>
-        <p>Hodor. Hodor hodor, hodor. Hodor hodor hodor hodor hodor. Hodor. Hodor!</p>
-        <footer class="tweet-footer">
-          <small>10 days ago</small>
-          <div class="icons">
-            <i class="fas fa-flag"></i>
-            <i class="fas fa-retweet"></i>
-            <i class="fas fa-heart"></i>
-          </div>
-        </footer>
-      </article><article class="tweet">
-        <header class="tweet-header">
-          <a><i class="far fa-smile"></i>Newton</a>
-          <strong>@SirIsaac</strong>
-        </header>
-        <p>Hodor. Hodor hodor, hodor. Hodor hodor hodor hodor hodor. Hodor. Hodor!</p>
-        <footer class="tweet-footer">
-          <small>10 days ago</small>
-          <div class="icons">
-            <i class="fas fa-flag"></i>
-            <i class="fas fa-retweet"></i>
-            <i class="fas fa-heart"></i>
-          </div>
-        </footer>
-      </article><article class="tweet">
-        <header class="tweet-header">
-          <a><i class="far fa-smile"></i>Newton</a>
-          <strong>@SirIsaac</strong>
-        </header>
-        <p>Hodor. Hodor hodor, hodor. Hodor hodor hodor hodor hodor. Hodor. Hodor!</p>
-        <footer class="tweet-footer">
-          <small>10 days ago</small>
-          <div class="icons">
-            <i class="fas fa-flag"></i>
-            <i class="fas fa-retweet"></i>
-            <i class="fas fa-heart"></i>
-          </div>
-        </footer>
-      </article>
-      
     </section>
 
   </main>
