--- a/public/index.html
+++ b/public/index.html
@@ -61,7 +61,7 @@
   <main id="container">
 
     <section class="new-tweet">
-      <form class="new-tweet-form" method="post" action="/tweets/">
+      <form id="data" class="new-tweet-form" method="post" action="/tweets/">
         <textarea name="text" id="tweet-text" placeholder="What are you humming about?"></textarea>
         <div class="submitbttn-counter-container">
           <button style="
@@ -74,22 +74,6 @@
     </section>
 
     <section id="tweets-container">
-      <form id="data"></form>
-        <article class="tweet">
-          <header class="tweet-header">
-            <a><i class="far fa-smile"></i>Newton</a>
-            <strong>@SirIsaac</strong>
-          </header>
-          <p>Hodor. Hodor hodor, hodor. Hodor hodor hodor hodor hodor. Hodor. Hodor!</p>
-          <footer class="tweet-footer">
-            <small>10 days ago</small>
-            <div class="icons">
-              <i class="fas fa-flag"></i>
-              <i class="fas fa-retweet"></i>
-              <i class="fas fa-heart"></i>
-            </div>
-          </footer>
-        </article>
     </section>
 
   </main>
