Error slideUp works

--- a/public/index.html
+++ b/public/index.html
@@ -64,9 +64,7 @@
             <output name="counter" class="counter" for="tweet-text">140</output>
           </div>
         </form>
-        <script class="error-msg">
-        "Errorrrrr"
-        </script>
+        <script class="error-msg"></script>
       </section>
       <section id="tweets-container">
       </section>
