--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,8 @@
   <div class="header-main-container">
     <header class="header">
       <div class="header-img">
-        <img src="/images/profile-hex.png">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQcjKImXdp9KkyMCuOITrQejRuX5uRjV9GZZA&usqp=CAU"
+        class="profile-avatar">
       </div>
       <br>
       <div>
@@ -56,10 +57,10 @@
     <!-- Page-specific (main) content here -->
     <main id="container">
       <section class="new-tweet"><form id="data" class="new-tweet-form" method="post" action="/tweets/">
-        <textarea name="text" id="tweet-text" placeholder="What are you humming about?"></textarea>
+        <textarea name="text" id="tweet-text" placeholder="What are you humming about?" autofocus></textarea>
         <div class="submitbttn-counter-container">
           <button style="
-          background-color: #4056A1;
+          background-color: #e887bb;
           color: #FFFFFF;
           border: transparent;
           padding-top: 3px;
