--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,7 @@
   <div class="header-main-container">
     <header class="header">
       <div class="header-img">
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQcjKImXdp9KkyMCuOITrQejRuX5uRjV9GZZA&usqp=CAU"
+        <img src="/images/profile-hex.png"
         class="profile-avatar">
       </div>
       <br>
